force-app/main/default/objects/Objetivo__c/Objetivo__c.object-meta.xml
<CustomObject>
    <label>Objetivo</label>
    <nameField>
        <label>Objetivo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objetivos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>