force-app/main/default/objects/Objetivo__c/fields/Acciones__c.field-meta.xml
<CustomField>
    <fullName>Acciones__c</fullName>
    <label>Acciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>