force-app/main/default/objects/Objetivo__c/fields/Clase_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_cuenta__c</fullName>
    <formula>TEXT(Cuenta__r.Clase_de_cuenta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clase de cuenta</label>
    <type>Text</type>
</CustomField>