force-app/main/default/objects/Objetivo__c/fields/Codigo_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Objetivo__c</fullName>
    <displayFormat>OB{YY}-{0000}</displayFormat>
    <label>Código Objetivo</label>
    <type>AutoNumber</type>
</CustomField>