force-app/main/default/objects/Objetivo__c/fields/Coste_Previsto__c.field-meta.xml
<CustomField>
    <fullName>Coste_Previsto__c</fullName>
    <formula>vnprev__c -  Margen_Previsto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste Previsto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>