force-app/main/default/objects/Objetivo__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Objetivos</relationshipLabel>
    <relationshipName>Objetivos</relationshipName>
    <type>Lookup</type>
</CustomField>