force-app/main/default/objects/Objetivo__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Finalizado</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Vigente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>