force-app/main/default/objects/Objetivo__c/fields/Fecha_ini__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ini__c</fullName>
    <label>Fecha Inicio</label>
    <type>Date</type>
</CustomField>