force-app/main/default/objects/Objetivo__c/fields/FICEPI_Owner__c.field-meta.xml
<CustomField>
    <fullName>FICEPI_Owner__c</fullName>
    <formula>Owner:User.FICEPI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FICEPI Owner</label>
    <type>Text</type>
</CustomField>