force-app/main/default/objects/Objetivo__c/fields/Herramientas__c.field-meta.xml
<CustomField>
    <fullName>Herramientas__c</fullName>
    <label>Herramientas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>