force-app/main/default/objects/Objetivo__c/fields/Nombre_negocio__c.field-meta.xml
<CustomField>
    <fullName>Nombre_negocio__c</fullName>
    <label>Nombre negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>