force-app/main/default/objects/Objetivo__c/fields/Oferta__c.field-meta.xml
<CustomField>
    <fullName>Oferta__c</fullName>
    <label>Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>DAA</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Digital-Latam</fullName>
            </value>
            <value>
                <fullName>Hybrid IT</fullName>
            </value>
            <value>
                <fullName>ITO</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Smart Factories</fullName>
            </value>
            <value>
                <fullName>SW Devep.</fullName>
            </value>
            <value>
                <fullName>Saleforce</fullName>
            </value>
            <value>
                <fullName>Oferta Base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>