force-app/main/default/objects/Objetivo__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad / Oferta</label>
    <referenceTo>Oportunidad__c</referenceTo>
    <relationshipLabel>Objetivos</relationshipLabel>
    <relationshipName>Objetivos</relationshipName>
    <type>Lookup</type>
</CustomField>