force-app/main/default/objects/Objetivo__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad/Oferta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Objetivos</relationshipLabel>
    <relationshipName>Objetivos</relationshipName>
    <type>Lookup</type>
</CustomField>