force-app/main/default/objects/Objetivo__c/fields/Puntos_debiles__c.field-meta.xml
<CustomField>
    <fullName>Puntos_debiles__c</fullName>
    <label>Puntos débiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>