force-app/main/default/objects/Objetivo__c/fields/Puntos_Fuertes__c.field-meta.xml
<CustomField>
    <fullName>Puntos_Fuertes__c</fullName>
    <label>Puntos Fuertes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>