force-app/main/default/objects/Objetivo__c/fields/Tipo_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Negocio__c</fullName>
    <label>Tipo de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Extension</fullName>
            </value>
            <value>
                <fullName>Recurrent Extension</fullName>
            </value>
            <value>
                <fullName>Previous exclusive framework agreement</fullName>
            </value>
            <value>
                <fullName>Previous framework agreement with competitors</fullName>
            </value>
            <value>
                <fullName>New Extension or variation</fullName>
            </value>
            <value>
                <fullName>New exclusive framework agreement</fullName>
            </value>
            <value>
                <fullName>New framework agreement with competitors</fullName>
            </value>
            <value>
                <fullName>New contract being incumbent</fullName>
            </value>
            <value>
                <fullName>New contract</fullName>
            </value>
            <value>
                <fullName>New contract multiyear/multistage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>