force-app/main/default/objects/Objetivo__c/fields/Tipo_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Objetivo__c</fullName>
    <label>Tipo Objetivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apertura Cuenta</fullName>
            </value>
            <value>
                <fullName>Crecimiento a cuenta TOP</fullName>
            </value>
            <value>
                <fullName>Posicionamiento Oferta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>