force-app/main/default/objects/Objetivo__c/fields/vnprev__c.field-meta.xml
<CustomField>
    <fullName>vnprev__c</fullName>
    <label>Volumen Previsto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>