force-app/main/default/objects/Objetivo__c/validationRules/Cuenta_Sector_segmento.validationRule-meta.xml
<ValidationRule>
    <fullName>Cuenta_Sector_segmento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR( ISBLANK(TEXT(Cuenta__r.Sector__c)),
ISBLANK(TEXT(Cuenta__r.Subsector__c))
),
ISBLANK(Codigo_Objetivo__c)
)</errorConditionFormula>
    <errorDisplayField>Cuenta__c</errorDisplayField>
    <errorMessage>No se puede crear un objetivo si el cliente no tiene informado sector y subsector</errorMessage>
</ValidationRule>