force-app/main/default/objects/Objetivo__c/listViews/Copia_de_Mis_Objetivos.listView-meta.xml
<ListView>
    <fullName>Copia_de_Mis_Objetivos</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_ini__c</columns>
    <columns>Fecha_max__c</columns>
    <columns>Linea_de_Servicio__c</columns>
    <columns>Orgcomercial__c</columns>
    <columns>Tipo_Objetivo__c</columns>
    <columns>vnprev__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>V</value>
    </filters>
    <label>Mis Objetivos Abiertos</label>
</ListView>