force-app/main/default/objects/Objetivo__c/listViews/Mis_objetivos_propietario.listView-meta.xml
<ListView>
    <fullName>Mis_objetivos_propietario</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_ini__c</columns>
    <columns>Fecha_max__c</columns>
    <columns>Linea_de_Servicio__c</columns>
    <columns>Orgcomercial__c</columns>
    <columns>Tipo_Objetivo__c</columns>
    <columns>vnprev__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Objetivos</label>
</ListView>